# crypto_wallet_analysis_agent

./: .env.example  .gitignore  .gitmodules  README.md  code_quality_evaluation.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml
data/wallet_age_analysis/: 0x14c90a5e3f0933dd21f84074e10ef4fe4f16e683_analysis.md  0x2c4a918c6b840cfcb370698d977bda6d93a1ecde_analysis.md  0x36cadd40496202370a7015222c122fa6fb2f3ee1_analysis.md  0x3e38328701bd61b73dfe26e9280746a4d369eb79_analysis.md  0x48a206ffbd8b0bfde9f59a7f7a6668ae9f04de84_analysis.md  0x5ddad02fb1e60b83b4acf7cc5beb104e4392df20_analysis.md  0x60761c78308a866b5cc0dbc443c5a04e4f705115_analysis.md  0x6078eaa05c9a253a22c4b0d24e895617616ea9d8_analysis.md  0x6089315d3479ac3840e739dd8fa7eed3a4e959da_analysis.md  0x60cadca4a6089d0cfe71aaad1cfc2cb83aed6c4d_analysis.md  0x7978b93f20c466f124f38ac41bf7c85cd122c30b_analysis.md  0x91348fe6b150de2c6ff5313dce31f650244a0995_analysis.md  0x92154f5c6b306692de49660e77c3c36a469fc7c4_analysis.md  0x95819651123b3ed7e57c112203c0639063084732_analysis.md  0x9d6cb9cb45606bda79a669682ad4ecca3c0c4eb1_analysis.md  0xa6fd8b895826dcd08bccccfdbd73f9f1032a283d_analysis.md  0xb0af3615276c46d0b2bed02ef50915b5ae62f83e_analysis.md  0xb2513b39b52f7c6fe858945c828493e901b34758_analysis.md  0xb90c9c149e92ba0e027e56c45d4c6e69a0c8ea35_analysis.md  0xc0f811e78c1e35be3a9045963c887af07ea29dd6_analysis.md  0xc671acfdec866afb3f2c22a144590a6ecd144cc7_analysis.md  summary.md  (+6 more)
docs/: api_specs.md
src/: analyzer.py
tests/: test_data_collection.py  test_placeholder.py
(+311 files in other folders)
