[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto_wallet_analysis_agent"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.hatch.build.targets.wheel]
packages = ["src"]